cmake_minimum_required(VERSION 3.22)
project(Xcamp_Bronze)

set(CMAKE_CXX_STANDARD 14)

add_executable(Xcamp_Bronze
        "Completed/Bucket Brigade.cpp"
        "Completed/Clockwise_Fence.cpp"
        "Completed/Contaminated Milk.cpp"
        "Completed/Cow Hopscotch (Bronze).cpp"
        "Completed/Cow Jog.cpp"
        "Completed/Cow Routing.cpp"
        "Completed/Don't Be Last!.cpp"
        "Completed/Even More Odd Photos.cpp"
        "Completed/Mowing the Field.cpp"
        "Completed/Out of Place.cpp"
        Completed/Photoshoot.cpp
        "Completed/Promotion Counting.cpp"
        "Completed/Social Distancing II.cpp"
        "Completed/Taming the Herd.cpp"
        Completed/Teleportation.cpp
        "Completed/Why Did the Cow Cross the Road.cpp"
        Completed/Herdle.cpp "Completed/Vasya and Books.cpp" "Completed/Appending Mex.cpp" "Completed/Email from Polycarp.cpp" "Completed/Cheap Travel.cpp" "Completed/Shell Game.cpp" "Completed/Pashmak and Garden.cpp" "Completed/Odd Selection.cpp" Completed/Worms.cpp "Completed/Table Tennis.cpp" "Completed/Sort the Array.cpp" Completed/X-Sum.cpp "Completed/Minimum Extraction.cpp" "Completed/Reverse and Concatenate.cpp" "Completed/Word_Processor.cpp" "Completed/Do_You_Know_Your_ABCs.cpp" "Completed/Comfortable_Cows.cpp")
